--- a/bookings/templates/layout.html
+++ b/bookings/templates/layout.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous" defer></script>
+    <script src="https://kit.fontawesome.com/f54b8d584c.js" crossorigin="anonymous"></script>
 
 
     {% block head %}
@@ -91,7 +92,7 @@
                             Contact Us
                         </h5>
                         <p>
-                            <a href="tel: 12345678" class=""><span class="cBlue">Tel: 12345678</span></a>
+                            <a href="tel: +40 749 412 220" class=""><span class="cBlue fa-sharp fa-solid fa-phone">Tel: +40 749 412 220</span></a>
                         </p>
                         <p>
                             <a class="uLine cHover" href="{% url 'booking' %}" >Online Booking</a>
