--- a/bookings/templates/layout.html
+++ b/bookings/templates/layout.html
@@ -20,7 +20,7 @@
         <nav class="navbar bg-white navbar-white navbar-expand-lg shadow-sm">
             <div class="container-fluid">
                 <a class="navbar-brand  cHover cGreen fs-2" href="{% url 'index' %}">
-                    Dr.John Smith
+                    BBA Quality Car
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -97,11 +97,30 @@
                         <p>
                             <a class="uLine cHover" href="{% url 'booking' %}" >Online Booking</a>
                         </p>
+                        <p>
+                            <a href="mailto: Bursuc_bogdan2003@yahoo.com"><span class="cBlue">Email: Bursuc_bogdan2003@yahoo.com</span></a>
+                        </p>
                     </div>
                     <!-- Grid column -->
+
+                    <!-- Opening Hours -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h5 class="text-uppercase fw-bold mb-4 textGradient">
+                            Opening Hours
+                        </h5>
+                        <div class="date-time">
+                          <div class="date">Mon-Fri</div>
+                          <div class="time">8AM - 5PM</div> 
+                        </div>
+                        <div class="date-time">
+                          <div class="date">Sat</div>
+                          <div class="time">9AM - 2PM</div> 
+                        </div> 
+                    </div>
+                    <!-- Opening Hours -->
                     
                     <!-- Service links Regular -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h5 class="text-uppercase fw-bold mb-4 textGradient">
                             Services
