update user info functionality

--- a/bookings/templates/layout.html
+++ b/bookings/templates/layout.html
@@ -55,6 +55,7 @@
                             </a>
                             <ul class="dropdown-menu  border zNav">
                                 <li><a class="dropdown-item" href="{% url 'userPanel' %}">User Panel</a></li>
+                                <li><a class="dropdown-item" href="{% url 'update' %}">Update Info</a></li>
                                 <li>
                                     <hr class="">
                                 </li>
