--- a/bookings/templates/userPanel.html
+++ b/bookings/templates/userPanel.html
@@ -12,11 +12,18 @@
 <div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5 ">
     <h2 class="">User Info:</h2>
     <ul class="list-group fs-4 mt-3">
-            <li class="list-group mt-2">First Name: {{ user.first_name }}</li>
-            <li class="list-group mt-2">Last Name: {{ user.last_name }}</li>
-            <li class="list-group mt-2">Username: {{ user.username }}</li>
+        <li class="list-group mt-2">First Name: {{ user.first_name }}</li>
+        <li class="list-group mt-2">Last Name: {{ user.last_name }}</li>
+        <li class="list-group mt-2">Username: {{ user.username }}</li>
+        <li class="list-group mt-2">Email: {{ user.email }}</li>
     </ul>
+    <form method="POST" class="mt-3" action="{% url 'update' %}">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        <button type="submit" class="btn btn-primary rounded-3 p-2">Update</button>
+    </form>
 </div>
+
 
 <!--Appointment Loop-->
 {% if appointments.count > 0 %}
@@ -29,7 +36,8 @@
             <p class="list-group mt-2">Time: {{ appointment.time }}</p>
             <p class="list-group mt-2">Service: {{ appointment.service }}</p>
             <div class="mt-3 mb-2">
-                <a class="btn btn-primary rounded-3 p-2" href="{% url 'userUpdate' appointment.id %}">Edit Appointment</a>
+                <a class="btn btn-primary rounded-3 p-2" href="{% url 'userUpdate' appointment.id %}">Edit
+                    Appointment</a>
             </div>
         </div>
         {% endfor %}
