--- a/bookings/templates/layout.html
+++ b/bookings/templates/layout.html
@@ -38,7 +38,7 @@
                             <a class="nav-link active cHover" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active cHover" href="#contact">Contact Us</a>
+                            <a class="nav-link active cHover" href="{% url 'contact' %}">Contact Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active cHover" href="{% url 'booking' %}">Online Booking</a>
