context processors for crispy forms

--- a/bookings/templates/layout.html
+++ b/bookings/templates/layout.html
@@ -90,6 +90,10 @@
 
     {% block body %}
     {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+    
     <footer class="bg-dark text-white">
         <div class="container-fluid pt-3">
             <section class="">
