--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 
 <div class="bg bg-secondary text-dark pt-5 pb-5">
     <div class="text-center  pt-5 pb-5">
-        {% load static %} <img src="{% static "bba-quality-car/media/bba-quality-car-logo.jpg" %}" alt="logo" />
+        <img src="{% static "media/bba-quality-car-logo.jpg" %}" alt="logo" />
         <h1 class="display-1 cGreen me-2 ms-2">BBA Quality Car</h1>
         <p class="fs-4 mt-3">BBA Qality CAR S.R.L este un service auto mai micut dar cu o dorinta mare de a satisface
             toate dorin</p>
